# CppPlay

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: ClangFormat.cmake
modules/crypto/: CMakeLists.txt  Decryptor.cpp  Decryptor.h  Encryptor.cpp  Encryptor.h  main.cpp
